DrPlan-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drplan-app-deployment
  namespace: drplan-app
  labels:
    app: drplan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: drplan
  template:
    metadata:
      labels:
        app: drplan
    spec:
      containers:
        - name: drplan-app-container
          image: drplanacrrepo.azurecr.io/drplan-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: acr-auth-secre
