DrPlan-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drplan-ingress
  namespace: drplan-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drplan-service
                port:
                  number: 8080
